# excel-csv-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: conftest.py  pyproject.toml
backend/app/: main.py
backend/app/config/: loader.py  mapping.json
backend/app/logging_utils/: metrics.py
backend/app/output/: writer.py
backend/app/processing/: client.py  errors.py  normalizer.py  parser.py  pipeline.py  schema.py  splitter.py  transformer.py  validator.py
backend/app/tests/: fixtures.py  test_client.py  test_config_loader.py  test_download.py  test_error_handling.py  test_file_naming.py  test_logging.py  test_normalizer.py  test_parser.py  test_pipeline.py  test_placeholder.py  test_schema.py  test_splitter.py  test_transformer.py  test_upload.py  test_validator.py  test_writer.py
backend/app/tests/fixtures/: fixture_empty_sheet.xlsx  fixture_header_offset.xlsx  fixture_large.xlsx  fixture_large_10k.xlsx  fixture_missing_columns.xlsx  fixture_mixed_dates.xlsx  fixture_multi_sheet.xlsx  fixture_no_header.xlsx  fixture_perfect.xlsx  fixture_single_row_clean.xlsx  fixture_single_row_rejected.xlsx  fixture_zip_edge_cases.xlsx
backend/app/tests/integration/: test_edge_cases.py  test_full_pipeline.py
backend/app/utils/: file_naming.py
docs/: e3_checkpoint_report.md  fixture_catalog.md  fixture_validation.md  input_contract.md  prompt_history.md
docs/checkpoints/: e4_checkpoint_report.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
(+3 files in other folders)
