[project]
name = "excel-csv-pipeline"
version = "0.1.0"
description = "Excel to CSV donation data pipeline"
requires-python = ">=3.12"
 
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
]
 
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
 
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
 